<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:elevation="3dp"
        app:cardCornerRadius="2dp"
        android:layout_margin="5dp">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/memo_date_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/memo_date"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="13dp"
                android:textStyle="bold"
                android:layout_weight="1"
                />

            <View
                android:id="@+id/memo_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/date_text_view_color"/>

            <TextView
                android:id="@+id/memo_title_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:text="@string/memo_title"
                android:textAlignment="center"
                android:textSize="25dp"
                android:layout_weight="12"
                />

            <TextView
                android:id="@+id/memo_mode_textview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/memo_title_textview"
                android:textAlignment="center"
                android:text="@string/mode_selected"/>

        </LinearLayout>




    </android.support.v7.widget.CardView>



</LinearLayout>